<resources>
    <string name="app_name">MeliTruko</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_melitruko">MeliTruko</string>
    <string name="title_players_list">Lista de jogadores</string>
    <string name="cd_icon_person">Icone de uma pessoa</string>
    <string name="label_no_players_added">Nenhum jogador \n adicionado</string>
    <string name="txt_add_player">Adicionar novo jogador</string>
    <string name="cd_ic_back">Seta de retorno à tela anterior</string>
    <string name="cd_ic_players">Ícone de pessoas/ jogadores</string>
    <string name="txt_1x1">1x1</string>
    <string name="txt_2x2">2x2</string>
    <string name="txt_3x3">3x3</string>
    <string name="txt_start_game">Iniciar jogo</string>
    <string name="txt_blue">Azul</string>
    <string name="txt_white">Branco</string>
    <string name="txt_x">X</string>
    <string name="txt_btn_truco">TRUCO!!</string>
    <string name="txt_btn_six">SEIS!!</string>
    <string name="txt_btn_nine">NOVE!!</string>
    <string name="txt_btn_twelve">DOZE!!</string>
    <string name="txt_end_game">Fim de jogo!</string>
    <string name="cd_player_photo">Foto do jogador</string>
    <string name="txt_new_game">Novo jogo</string>
    <string name="cd_btn_player">Botão para escolher um jogador</string>
    <string name="txt_player_1">Jogador 1</string>
    <string name="txt_player_2">Jogador 2</string>
    <string name="txt_player_3">Jogador 3</string>
    <string name="txt_player_4">Jogador 4</string>
    <string name="txt_player_5">Jogador 5</string>
    <string name="txt_player_6">Jogador 6</string>
    <string name="cd_btn_add_player_image">Botão para inserir uma imagem ao jogador</string>
    <string name="cd_app_logo">Logotipo do aplicativo Melitruko</string>
    <string name="txt_toast_choose_option">Escolha uma opção</string>
    <string name="txt_numbers_players">N° de jogadores</string>
    <string name="txt_select_a_player">Selecione um jogador</string>
    <string name="txt_tap_the_image">Aperte na imagem para escolher um jogador</string>
    <string name="txt_tv_choose_a_player">Escolha um jogador</string>
    <string name="txt_positive_button">SIM</string>
    <string name="txt_negative_button">NÃO</string>
    <string name="txt_dialog_confirmation">Deseja encerrar a partida?</string>
    <string name="cd_img_alert">Imagem de alerta</string>
    <string name="cd_bad_emoji">Emoji de raiva</string>
    <string name="cd_happy_emoji">Emoji de alegria com óculos escuros</string>
    <string name="txt_btn_back">Voltar</string>
    <string name="cd_btn_remove_photo">Botão para excluir foto escolhida para o jogador</string>
    <string name="txt_new_player">Novo jogador</string>
    <string name="txt_name">Nome</string>
    <string name="txt_image">Imagem</string>
    <string name="txt_default_image">Imagem padrão</string>
    <string name="txt_camera">Câmera</string>
    <string name="txt_gallery">Galeria</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_to_save">Salvar</string>
    <string name="txt_app_exit_confirmation">Deseja sair do aplicativo?</string>
    <string name="dialog_btn_exit">Sair</string>
    <string name="dialog_btn_cancel">Cancelar</string>
</resources>