<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_numbers_players"
        android:textColor="@color/navy_blue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_one_versus_one"
            style="@style/Theme.SelectorChip"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/txt_1x1"
            app:chipCornerRadius="20dp"
            app:chipStrokeColor="@color/navy_blue"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_two_versus_two"
            style="@style/Theme.SelectorChip"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/txt_2x2"
            app:chipCornerRadius="20dp"
            app:chipStrokeColor="@color/navy_blue"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_three_versus_three"
            style="@style/Theme.SelectorChip"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:text="@string/txt_3x3"
            app:chipCornerRadius="20dp"
            app:chipStrokeColor="@color/navy_blue"
            app:chipStrokeWidth="2dp" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView_choose_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_tap_the_image"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_game"
        app:layout_constraintTop_toBottomOf="@+id/textView_choose_players"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/txt_start_game"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>