<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/style_players_list">

    <TextView
        android:id="@+id/tv_new_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/style_blue_view_choose_a_player"
        android:padding="10dp"
        android:text="@string/txt_new_player"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/txt_name"
        android:textColorHint="@color/navy_blue"
        app:boxStrokeColor="@color/navy_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_player">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/cursor_custom"
            android:maxLength="20"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_image"
        android:textColor="@color/navy_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField" />

    <ImageButton
        android:id="@+id/ib_remove_photo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_trash"
        android:visibility="gone"
        android:contentDescription="@string/cd_btn_remove_photo"
        app:layout_constraintBottom_toBottomOf="@+id/linear_layout"
        app:layout_constraintStart_toEndOf="@+id/linear_layout"
        app:layout_constraintTop_toTopOf="@+id/linear_layout" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_image">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_default_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/txt_default_image"
            android:textColor="@color/navy_blue"
            android:textSize="18sp"
            app:iconSize="20dp"
            app:icon="@drawable/ic_default_person"
            app:iconTint="@color/navy_blue"
            app:strokeColor="@color/navy_blue"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/txt_camera"
            android:textAlignment="textStart"
            android:textColor="@color/navy_blue"
            android:textSize="18sp"
            app:iconSize="24dp"
            app:icon="@drawable/ic_camera"
            app:iconTint="@color/navy_blue"
            app:strokeColor="@color/navy_blue"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/txt_gallery"
            android:textAlignment="textStart"
            android:textColor="@color/navy_blue"
            android:textSize="18sp"
            app:iconSize="24dp"
            app:icon="@drawable/ic_add_image"
            app:iconTint="@color/navy_blue"
            app:strokeColor="@color/navy_blue"
            app:strokeWidth="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_player"
            style="@style/ImageViewPlayerPhotoMatch"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/cd_player_photo"
            android:visibility="gone"
            tools:srcCompat="@drawable/img_profile" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/txt_cancel"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_new_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:strokeColor="@color/navy_blue"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_to_save"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>

