<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/navy_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_melitruko"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ic_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/ic_back"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/textView"
        android:contentDescription="@string/cd_ic_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/title_players_list"
        android:textColor="@color/navy_blue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="8dp"
        android:background="@drawable/style_lista_jogadores_transparente"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraint_secondary">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="10dp"
                tools:itemCount="9"
                tools:listitem="@layout/layout_player" />

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_person"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_person"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tv_none_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraint_secondary"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/cd_icon_person" />

    <TextView
        android:id="@+id/tv_none_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_no_players_added"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_secondary"
        app:layout_constraintEnd_toEndOf="@+id/iv_person"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/iv_person"
        app:layout_constraintTop_toBottomOf="@+id/iv_person" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:text="@string/txt_add_player"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_add_person"
        app:iconGravity="textStart"
        app:iconPadding="14dp"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>