<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:background="@color/navy_blue"
    app:layout_constraintBottom_toTopOf="@+id/materialButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/chip_group">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player_1"
        style="@style/Style.ImageButton.Profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cd_btn_player" />

    <TextView
        android:id="@+id/tv_player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_select_a_player"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_player_1"
        app:layout_constraintStart_toStartOf="@+id/iv_player_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_player_1" />

    <TextView
        android:id="@+id/tv_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_x"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_1" />

    <TextView
        android:id="@+id/tv_player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_select_a_player"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_player_2"
        app:layout_constraintStart_toStartOf="@+id/iv_player_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_x" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player_2"
        style="@style/Style.ImageButton.Profile"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/cd_btn_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_player_2" />

</androidx.constraintlayout.widget.ConstraintLayout>